# Learn-raspberry-pico2

./: README.md
wiki/Log/Ejemplos/: .gitignore  README.md  pico2-tx.ice  pico2-txrx2.ice
wiki/Log/Ejemplos/01-Ejemplos-asm/: 01-blinky-gpio15.S  02-ledon-gpio15.S  03-ledon-gpio15.S  04-ledon-gpio0.S  05-ledon.S  06-ledon.S  07-ledon.S  08-ledon.S  CMakeLists.txt
wiki/Log/Ejemplos/02-Ejemplos-asm-no-sdk/: 09-ledon.S  build.sh  gpio.h  run.sh
wiki/Log/Ejemplos/03-blinky/: blinky.S  build.sh  run.sh
wiki/Log/Ejemplos/04-blinky/: blinky.S  build.sh  delay.S  led.S
wiki/Log/Ejemplos/05-btn0-led/: CMakeLists.txt  btn0-led.c  build.sh  dasm.sh  gpio.h  led.s  main.s
wiki/Log/Ejemplos/06-btn0-led-toggle/: build.sh  button.s  clean.sh  led.s  main.s  runc.sh
wiki/Log/Ejemplos/07-debug-led1/: build.sh  debug.s  gpio.h  led.s  main.dasm  main.s
wiki/Log/Ejemplos/08-txchar/: led.s  main.s
wiki/Log/Ejemplos/08-txchar-ini/: dasm.sh  led.s  txchar.c
wiki/Log/Ejemplos/09-txchar/: CMakeLists.txt  build.sh  button.s  debug.s  gpio.h  main.s  regs.h  runtime.s  uart.s
wiki/Log/Ejemplos/10-btn-txchar/: build.sh  button.s  main.s  regs.h  runc.sh  uart.s
wiki/Log/Ejemplos/11-rxchar/: CMakeLists.txt  button.s  configure.sh  main.s  regs.h  rxchar.c  uart.s
wiki/Log/Ejemplos/12-eco/: main.s
wiki/Log/Ejemplos/13-counter-raw8/: build.sh  main.s  uart.s
wiki/Log/Ejemplos/14-counter-raw16/: linker.ld  main.s  uart.s
wiki/Log/Ejemplos/14-print-raw16/: boot.h  build.sh  dasm.sh  regs.h  runtime.s
wiki/Log/Ejemplos/15-print-raw32/: main.s  uart.s
wiki/Log/Ejemplos/16-LPOSC-readfreq/: main.s
wiki/Log/Ejemplos/17-print_hex4/: main.s  uart.s
wiki/Log/Ejemplos/18-print_hex8/: main.s
wiki/Log/Ejemplos/19-dump16/: dump.s  main.s  uart.s
wiki/Log/Ejemplos/20-print_hex16/: main.s  uart.s
wiki/Log/Ejemplos/21-print_hex32/: main.s  uart.s
wiki/Log/Ejemplos/22-vars-rodata/: dump.s  linker.ld  main.s
wiki/Log/Ejemplos/23-vars-bss/: build.sh  main.s  uart.s
wiki/Log/Ejemplos/24-vars-data/: main.s
wiki/Log/Ejemplos/25-print/: linker.ld  main.s  uart.s
wiki/Log/Ejemplos/26-Monitor-V-0.1/: ansi.s  build.sh  linker.ld  main.s
wiki/Log/Ejemplos/27-Monitor-V-0.2/: ansi.h  ansi.s  boot.h  boot.s  build.sh  linker.ld  main.s  monitorv.s  uart.h
wiki/Log/Ejemplos/28-Monitor-V-0.3/: ansi.h  main.s  monitorv.s  uart.s
wiki/Log/Ejemplos/31-csr/: build.sh  (+3 more)
(+93 files in other folders)
